WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33839
Style in WebCore/bridge/Bridge needs fixing
https://bugs.webkit.org/show_bug.cgi?id=33839
Summary
Style in WebCore/bridge/Bridge needs fixing
Steve Block
Reported
2010-01-19 03:52:22 PST
Style in WebCore/bridge/Bridge needs fixing See
Bug 33801
, which this bug blocks
Attachments
Patch 1 for Bug 33839
(12.29 KB, patch)
2010-01-19 06:05 PST
,
Steve Block
levin
: review+
steveblock
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-01-19 06:05:45 PST
Created
attachment 46902
[details]
Patch 1 for
Bug 33839
Steve Block
Comment 2
2010-01-20 03:35:29 PST
Comment on
attachment 46902
[details]
Patch 1 for
Bug 33839
This patch has been in the commit queue for over 12 hours but keeps getting pushed down the queue by other, more recent patches. Giving up and landing manually.
Steve Block
Comment 3
2010-01-20 03:39:21 PST
Landed as
http://trac.webkit.org/changeset/53541
Closing bug as resolved
Eric Seidel (no email)
Comment 4
2010-01-20 03:41:20 PST
Well, that and the bots have been red much of the day.
bug 33893
is our latest blocker. the commit-queue's landing speed greatly regressed with
http://trac.webkit.org/changeset/52764
But our biggest problem is just that the webkit.org bots are red all the time. :( Sorry the cq didn't work for you. Hopefully webkit-patch land-from-bug was at least helpful.
Steve Block
Comment 5
2010-01-20 03:49:27 PST
> Well, that and the bots have been red much of the day.
bug 33893
is our latest > blocker.
It's true that the bots are often red, but a number of patches have been landed in that time.
> Sorry the cq didn't work for you. Hopefully webkit-patch land-from-bug was at > least helpful.
No problem. Just makes me more keen to fix
Bug 33395
!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug